# scangearmp2

./: .gitignore  CMakeLists.txt  INSTALL  PKGBUILD  README.md
po/: de.po  fr.po  ja.po  zh.po
scangearmp2/: ChangeLog
scangearmp2/include/: libcnnet2_type.h
scangearmp2/src/: callbacks.c  canon_mfp_io.c  canon_mfp_tools.c  canon_mfp_tools.h  cnmsfunc.c  errordlg.c  errordlg.h  errors.h  file_control.c  jpeg2pdf.c  jpeg2pdf.h  keep_setting.c  main.c  mainui.c  progressbar.c  progressbar.h  scanmain.c  scanmain.h  selectdevice.c  selectdevice.h  support.h
scangearmp2/src/sane/: canon_pixma.c  canon_pixma.h  error_quit.h  errordlg.c  errordlg.h
src/: CMakeLists.txt  callbacks.c  callbacks.h  canon_mfp_io.c  canon_mfp_tools.c  canon_mfp_tools.h  cnmsfunc.c  cnmsfunc.h  cnmsstrings.h  errordlg.c  errors.c  errors.h  file_control.c  file_control.h  jpeg2pdf.c  keep_setting.c  keep_setting.h  main.c  mainui.c  mainui.h  progressbar.c  progressbar.h  scanmain.c  selectdevice.c  support.h
src/sane/: CMakeLists.txt  canon_pixma.c  canon_pixma.h  error_quit.c  sanei_debug.h
usr/include/: cnmslld.h  libcnnet2.h
usr/share/scangearmp2/: CMakeLists.txt
